--- a/app/src/main/res/layout/message_alert.xml
+++ b/app/src/main/res/layout/message_alert.xml
@@ -35,7 +35,7 @@
             android:maxLines="1"
             android:ellipsize="end"
             android:textSize="7pt"
-            android:textColor="@android:color/holo_blue_dark"
+            android:textColor="@android:color/holo_red_dark"
             android:text="Alert"
             />
         <TextView
