--- a/app/src/main/res/layout/message_alert.xml
+++ b/app/src/main/res/layout/message_alert.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="10dp"
-    android:paddingTop="35dp"
+    android:paddingTop="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="15dp"
     android:weightSum="8"
@@ -35,7 +35,7 @@
             android:maxLines="1"
             android:ellipsize="end"
             android:textSize="7pt"
-            android:textColor="@android:color/holo_red_dark"
+            android:textColor="@android:color/white"
             android:text="Alert"
             />
         <TextView
